syntax = "proto3";

package repository;

option go_package = "repository/";

service MemeService {
  rpc PublishMeme (PublishMemeRequest) returns (PublishMemeResponse);
  rpc GetTopLongMemes(TopLongMemesRequest) returns (MemesResponse);
  rpc SearchMemesBySubstring(SearchRequest) returns (MemesResponse);
  rpc GetMemesByMonth(MonthRequest) returns (MemesResponse);
  rpc GetRandomMeme(Empty) returns (MemeResponse);
}

message PublishMemeRequest {
  string timestamp = 1;
  string text = 2;
}

message TopLongMemesRequest {
  int32 limit = 1;
}

message SearchRequest {
  string query = 1;
}

message MonthRequest {
  int32 year = 1;
  int32 month = 2;
}

message PublishMemeResponse {
  bool success = 1;
}

message MemeResponse {
  string timestamp = 1;
  string text = 2;
}

message MemesResponse {
  repeated MemeResponse memes = 1;
}

message Empty {}
